--- a/Labolatorium 3/WebApplication2/WebApplication2/Views/Employee/CreateEmployee.cshtml
+++ b/Labolatorium 3/WebApplication2/WebApplication2/Views/Employee/CreateEmployee.cshtml
@@ -17,8 +17,31 @@
         <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Utwórz" class="btn btn-primary" />
+        <label asp-for="PESEL"></label>
+        <input asp-for="PESEL" class="form-control" />
+        <span asp-validation-for="PESEL" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label asp-for="Position"></label>
+        <input asp-for="Position" class="form-control" />
+        <span asp-validation-for="Position" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Department"></label>
+        <input asp-for="Department" class="form-control" />
+        <span asp-validation-for="Department" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="EmploymentDate"></label>
+        <input asp-for="EmploymentDate" class="form-control" />
+        <span asp-validation-for="EmploymentDate" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="TerminationDate"></label>
+        <input asp-for="TerminationDate" class="form-control" />
+        <span asp-validation-for="TerminationDate" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary">Dodaj</button>
 </form>
 
 @section Scripts {
