--- a/Labolatorium 3/WebApplication2/WebApplication2/Views/Employee/CreateEmployee.cshtml
+++ b/Labolatorium 3/WebApplication2/WebApplication2/Views/Employee/CreateEmployee.cshtml
@@ -41,6 +41,13 @@
         <input asp-for="TerminationDate" class="form-control" />
         <span asp-validation-for="TerminationDate" class="text-danger"></span>
     </div>
+    <div>
+        <label asp-for="Priority">Kategoria</label>
+        <div>
+            <span asp-validation-for="Priority" class="text-danger"></span>
+        </div>
+        <select class="form-control" asp-for="Priority" asp-items="@Html.GetEnumSelectList<Category>()"></select>
+    </div>
     <button type="submit" class="btn btn-primary">Dodaj</button>
 </form>
 
