feat: change createForm

--- a/Lab3 - zadanie/Views/Employee/Create.cshtml
+++ b/Lab3 - zadanie/Views/Employee/Create.cshtml
@@ -1,21 +1,19 @@
 ﻿@model Lab3zadanie.Models.Employee
-@{
-    // Your existing Razor page directives and setup
-}
+
 <h1>Add an Employee</h1>
 <form asp-controller="Employee" asp-action="Create" method="post">
     <div class="mb-3">
-        <label asp-for="FirstName">FirstName</label>
+        <label asp-for="FirstName">First Name</label>
         <input class="form-control" asp-for="FirstName" />
         <span class="text-danger" asp-validation-for="FirstName"></span>
     </div>
     <div class="mb-3">
-        <label asp-for="LastName">LastName</label>
+        <label asp-for="LastName">Last Name</label>
         <input class="form-control" asp-for="LastName" />
         <span class="text-danger" asp-validation-for="LastName"></span>
     </div>
     <div class="mb-3">
-        <label asp-for="PESEL">Pesel</label>
+        <label asp-for="PESEL">PESEL</label>
         <input class="form-control" asp-for="PESEL" />
         <span class="text-danger" asp-validation-for="PESEL"></span>
     </div>
@@ -26,13 +24,21 @@
     </div>
     <div class="mb-3">
         <label asp-for="Department">Department</label>
-        <select asp-for="Department" class="form-control">
-            <option value="IT">IT</option>
-            <option value="HR">HR</option>
-            <option value="Finance">Finance</option>
-            <option value="Marketing">Marketing</option>
+        <select class="form-control" asp-for="Department">
+            @{
+                var enumValues = Enum.GetValues(typeof(Lab3zadanie.Models.Department));
+                foreach (var value in enumValues)
+                {
+                    <option value="@value">@value</option>
+                }
+            }
         </select>
         <span class="text-danger" asp-validation-for="Department"></span>
+    </div>
+    <div class="mb-3">
+        <label asp-for="EmploymentDate">Employment Date</label>
+        <input class="form-control" asp-for="EmploymentDate" />
+        <span class="text-danger" asp-validation-for="EmploymentDate"></span>
     </div>
     <div class="mb-3">
         <button class="btn btn-primary" type="submit">Create</button>
