--- a/Lab3 - zadanie/Views/Employee/Index.cshtml
+++ b/Lab3 - zadanie/Views/Employee/Index.cshtml
@@ -21,11 +21,12 @@
                     <td>@item.FirstName</td>
                     <td>@item.LastName</td>
                     <td>@item.PESEL</td>
+                    <td>@item.Position</td>
+                    <td>@item.Department</td>
                     <td>
-                        <a class="btn btn-outline-secondary" asp-controller="Employee" asp-action="Update" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-outline-secondary" asp-controller="Employee" asp-action="Update" asp-route-id="@item.Id">Update</a>
                         <a class="btn btn-outline-info" asp-controller="Employee" asp-action="Details" asp-route-id="@item.Id">Details</a>
-                        <a class="btn btn-outline-danger" asp-controller="Employee" asp-action="Delete" asp-route-id="@item.Id"
-                           onclick="return confirm('Are you sure you want to delete this employee?');">Delete</a>
+                        <a class="btn btn-outline-danger" asp-controller="Employee" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
                 </tr>
             }
