feat: add button to add Employees when empty list

--- a/Lab3 - zadanie/Views/Employee/Index.cshtml
+++ b/Lab3 - zadanie/Views/Employee/Index.cshtml
@@ -34,6 +34,6 @@
     </table>
 }
 else
-{
+{   <a class="btn btn-primary" asp-controller="Employee" asp-action="Create">Add an Employee</a>
     <p class="alert alert-info">No employees to display.</p>
 }
